[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shmem-ipc = "0.3.0"
dbus-crossroads = "0.3"
dbus = "0.9.2"
libc = "0.2.85"

# [profile.dev]
# opt-level = 3               # Use slightly better optimizations.
# overflow-checks = false     # Disable integer overflow checks.